--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mongodb-tools": "^1.0.6",
     "mongoose": "^8.0.3",
+    "mongoose-sequence": "^5.3.1",
     "web3": "^4.3.0"
   }
 }
